--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>DOS2</title>
+<title>20160919130902</title>
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <link rel="stylesheet" type="text/css" href="./Qgis2threejs.css">
 </head>
@@ -44,7 +44,7 @@ and uses the following library:
 var option = Q3D.Options;
 option.bgcolor = 0xffffff;
 </script>
-<script src="./DOS2.js"></script>
+<script src="./20160919130902.js"></script>
 <script>
 if (typeof proj4 !== "undefined") document.getElementById("lib_proj4js").style.display = "list-item";
 
